    wrapped stream is not Syncable. (Amareshwari via umamahesh)

    HDFS-3402. Fix failure to start secure datanodes. (Benoy Antony via suresh)

    HDFS-4072. On file deletion remove corresponding blocks pending
    replications. (Jing Zhao via suresh)

    HADOOP-8951. RunJar to fail with user-comprehensible error 
    message if jar missing. (stevel via suresh)

Release 1.1.1 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8823. ant package target should not depend on cn-docs. (szetszwo)

  BUG FIXES

Release 1.1.0 - 2012.09.28

  INCOMPATIBLE CHANGES

    HDFS-2617. Replaced Kerberized SSL for image transfer and fsck with
    SPNEGO-based solution. (Jakob Homan, Owen O'Malley, Alejandro Abdelnur and
    Aaron T. Myers via atm)

    HDFS-3044. fsck move should be non-destructive by default.
    (Colin Patrick McCabe via eli)

    HADOOP-8230. Enable sync by default and disable append. (eli)

    HADOOP-8365. Provide ability to disable working sync. (eli)

    HADOOP-8552. Conflict: Same security.log.file for multiple users. 
    (kkambatl via tucu)
    
  NEW FEATURES

    MAPREDUCE-3118. Backport Gridmix and Rumen features to
    branch-0.20-security (Ravi Gummadi via amarrk)

    HADOOP-7806. Support binding to sub-interfaces. (harsh, eli via eli)

    HDFS-3150. Add option for clients to contact DNs via hostname. (eli)

    HDFS-3148. The client should be able to use multiple local interfaces
    for data transfer. (eli)

    HDFS-3055. Implement recovery mode (Colin Patrick McCabe via todd)

    HADOOP-8209. Add option to relax build-version check for branch-1. (eli)

    HDFS-3518. Add a utility method DistributedFileSystem.isHealthy(uri) for
    checking if the given HDFS is healthy. (szetszwo)

    HADOOP-7823. Port HADOOP-4012 providing split support for bzip2 compressed
    files to branch-1. (Andrew Purtell via cdouglas)

    HDFS-3703. Datanodes are marked stale if heartbeat is not received in